[tool.poetry]
name = "sql-alchemy-sandbox"
version = "0.1.0"
description = ""
authors = ["tadashi-aikawa <syou.maman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.18"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
